# cookiecutter-pypackage-poetry

./: CONTRIBUTING.rst  Justfile  README.rst  cookiecutter.json  requirements_dev.txt  setup.py  tox.ini
docs/: console_script_setup.rst  index.rst  prompts.rst  pypi_release_checklist.rst  troubleshooting.rst  tutorial.rst
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .gitignore  .travis.yml  CONTRIBUTING.rst  Justfile  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_name}}/docs/: installation.rst
