[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = {{ cookiecutter.project_short_description|tojson }}
authors = [{{ (cookiecutter.full_name ~ " <" ~ cookiecutter.email ~ ">")|tojson }}]
license = {{ cookiecutter.open_source_license|tojson }}

readme = "README.rst"

repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
{% if cookiecutter.document_publisher == 'ReadTheDocs' %}
homepage = "https://{{ cookiecutter.project_slug | replace("_", "-") }}.readthedocs.io"
{% else %}
homepage = "https://{{ cookiecutter.github_username }}.github.io/{{ cookiecutter.project_slug }}"
{%- endif %}

packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src"},
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[tool.poetry.dependencies]
python = ">=3.10,<4.0"
# List project dependencies here
{% if cookiecutter.command_line_interface|lower == "click" -%}
click = "^8.1"{% endif %}

{% if cookiecutter.command_line_interface|lower == "click" -%}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli:main"
{% endif %}

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
watchdog = "^4.0.0"
ruff = "^0.6.9"
tox = "^4.21.2"
coverage = "^7.6.1"
Sphinx = "^8.1.3"
twine = "^5.1.1"
{% if cookiecutter.use_pytest == "y" -%}
pytest = "^8.3.3"
pytest-cov = "^5.0.0"{% endif %}
rstcheck = "^6.2.4"
ptpython = "^3.0.29"

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
